--- a/scheduling-agent/package.json
+++ b/scheduling-agent/package.json
@@ -12,10 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.2",
     "@tanstack/react-query": "^5.66.0",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.4.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.1.5",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
